--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     font-family: 'Raleway';
     margin: 0;
     padding: 0;
-    line-height: 1;
+    /* line-height: 1; */
 }
 ol, ul,li {
     list-style: none;
@@ -40,10 +40,6 @@ Enlace de la documentación oficial!
 https://en.bem.info/methodology/quick-start/*/
 
 /*Sección Menu*/
-
-section.menu{
-
-}
 
 /*Sección Title*/
 
