--- a/style.css
+++ b/style.css
@@ -47,8 +47,11 @@ https://en.bem.info/methodology/quick-start/*/
 
 /*Sección About*/
 
-section.about{
 
+/*Sección Skills*/
+
+section.skills{
+    
 }
 
 /*Sección Hobbies*/
