--- a/style.css
+++ b/style.css
@@ -50,28 +50,15 @@ https://en.bem.info/methodology/quick-start/*/
 
 /*Sección Skills*/
 
-section.skills{
-    
-}
+
 
 /*Sección Hobbies*/
 
-section.hobbies{
-    
-}
 
-/* Experiencia Académica*/
 
-section.academic{
+/* formacion Académica*/
 
-}
 
-.unal{
-    width: 180px;
-}
-.itm{
-    width: 200px;
-}
 /* experiencia*/
 
 section.experience{
