--- a/assets/css/experiencia.css
+++ b/assets/css/experiencia.css
@@ -1,5 +1,5 @@
 section.experience{
-    border: solid 3px red;
+    /* border: solid 3px red; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@ section.experience{
     justify-content: center;
 }
 .experience__section__title{
-    border: solid 3px rgb(0, 21, 255);
+    /* border: solid 3px rgb(0, 21, 255); */
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
@@ -17,7 +17,7 @@ section.experience{
     color: #464646;
 }
 .experiencie__box{
-    border: solid 3px rgb(255, 162, 0);
+    /* border: solid 3px rgb(255, 162, 0); */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -28,7 +28,7 @@ section.experience{
 
 .experiencie__box__img{
     width: 70%;
-    border: solid 3px rgb(157, 110, 29);
+    /* border: solid 3px rgb(157, 110, 29); */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -40,7 +40,7 @@ section.experience{
 }
 
 .experience__info{
-    border: solid 3px rgb(251, 0, 255);
+    /* border: solid 3px rgb(251, 0, 255); */
     width: 30%;
 }
 .experience__title{
@@ -62,7 +62,7 @@ section.experience{
 }
 .experience__description{
     width: 55%;
-    border: solid 3px rgb(212, 255, 0);
+    /* border: solid 3px rgb(212, 255, 0); */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -207,22 +207,18 @@ section.experience{
 
 @media only screen and (max-width:720px) {
     section.experience{
-        border: solid 3px rgb(0, 4, 255);
         width: 100%;
         flex-wrap: wrap;
     }
     .experiencie__box{
-        border: solid 3px rgb(0, 4, 255);
         width: 100%;
         flex-wrap: wrap;
     }
     .experiencie__box__img{
         width: 100%;
-        border: solid 3px rgb(29, 157, 38);
     }
     
     .experience__info{
-        border: solid 3px rgb(255, 17, 0);
         /* width: 275px; */
         width: 100%;
         
@@ -233,4 +229,68 @@ section.experience{
     .experiencie__box--juego{
         flex-wrap: wrap-reverse;
     }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:720px) {
+    .experience__description{
+        width: 45%;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:560px) {
+    .experience__description{
+        width: 55%;
+    }
+    .experience__text{
+        font-size: 13px;
+    }
+    .experiencia__botao--repo{
+        width: 108px;
+        height: 40px;
+        font-size: 14px;
+    }
+    
+    .experience__botao--demo{
+        width: 96px;
+        height: 40px;
+        font-size: 14px;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:460px) {
+    .experience__description{
+        width: 65%;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:390px) {
+    .experience__description{
+        width: 75%;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:350px) {
+    .experience__description{
+        width: 85%;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:320px) {
+    .experience__description{
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
 }
