--- a/assets/css/contacto.css
+++ b/assets/css/contacto.css
@@ -1,3 +1,74 @@
+section.formcontato{
+    background-color: #EAF2FD;
+    width: 1440px;
+    height: 788px;
+    width: 100%;
+    margin-top: 32px;
+}
+.formcontato__contacto{
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    /* align-items: center; */
+}
+.formcontato--esquerda{
+    
+}
+.formcontato__img{
+    
+    height: 613px;
+}
+
+.formcontato__title{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    color: #464646;
+}
+
+.formcontato__text{
+    
+    width: 60%;
+}
+.formcontato__subtext{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #464646;
+}
+
+.formcontato__input{
+    width: 100%;
+    height: 56px;
+    margin-top: 32px;
+}
+.formcontato__textarea{
+    margin-top: 32px;
+    width: 100%;
+    height: 133px;
+}
+.formcontato__botao{
+    margin-top: 32px;
+    width: 144px;
+    height: 51px;
+    background: #2A7AE4;
+    /*lyrics*/
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+}
+/*PARTE LÓGICA ESTILOSA*/
+
+
 .formcontato__form{
     display: flex;
     flex-direction: column;
@@ -5,10 +76,10 @@
     align-items: center;
 }
 .formcontato__form [required]:valid{
-    border: thin solid greenyellow;
+    
 }
 .formcontato__form [required]:invalid{
-    border: thin solid rgb(255, 61, 47);
+    
 }
 .formcontato__span{
     background-color: rgba(255, 55, 0, 0.725);
@@ -44,4 +115,66 @@
 }
 .noneJ{
     display: none;
+}
+
+
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:1280px) {
+
+    .formcontato__img{
+        
+        height: 613px;
+        width: 400px;
+    }
+    
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:1080px) {
+
+    .formcontato__img{
+        
+        height: 613px;
+        width: 300px;
+    }
+    
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:830px) {
+
+    .formcontato__img{
+        
+        height: 633px;
+        width: 280px;
+    }
+    
+}
+
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:780px) {
+
+    section.formcontato{
+        
+        height: 678px;
+        width: 100%;
+        margin-top: 32px;
+    }
+
+    .formcontato__img{
+        display: none;
+    }
+    .formcontato--esquerda{
+        display: none;
+    }
+    .formcontato__text{
+        width: 100%;
+    }
+    
 }
