--- a/assets/css/contacto.css
+++ b/assets/css/contacto.css
@@ -176,5 +176,15 @@ section.formcontato{
     .formcontato__text{
         width: 100%;
     }
+    .formcontato__title{
+        font-size: 22px;
+    }
     
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+@media only screen and (max-width:875px) {
+    .formcontato__title{
+        font-size: 25px;
+    }
 }
