--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -30,5 +30,19 @@ section.footer{
 
 /* PARTE RESPONSIVE***************************************************************************** */
 
-@media only screen and (max-width:780px) {
+@media only screen and (max-width:230px) {
+    section.footer{
+        margin-top: 86px;
+
+     }
+}
+
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:190px) {
+    section.footer{
+        margin-top: 106px;
+
+     }
 }
