--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 90%;
 }
 
 section.menu{
@@ -15,6 +16,7 @@ section.menu{
 }
 
 .menu__header{
+    /* border: solid red 3px; */
     width: 15%;
     height: 24px;
     display: flex;
@@ -30,6 +32,7 @@ section.menu{
     color: #464646;
 }
 .menu__nav{
+    /* border: solid red 3px; */
     width: 60%;
     display: flex;
     justify-content: center;
@@ -156,5 +159,14 @@ section.menu{
         font-size: 14px;
         line-height: 19px;
         color: #464646;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:300px) {
+    .menu__list li:nth-child(6){
+        position: absolute;
+        top: -9999px;
     }
 }
