--- a/assets/css/title.css
+++ b/assets/css/title.css
@@ -3,6 +3,7 @@ section.title{
     /* border: solid red 3px; */
     display: flex;
     justify-content: space-around;
+    margin-bottom: 12px;
 }
 .title__div{
     /* border: solid rgb(255, 230, 0) 3px; */
@@ -38,6 +39,7 @@ section.title{
 }
 
 .title__network{
+    margin-top: 5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -56,7 +58,7 @@ section.title{
 .title__network__item a{
     text-decoration: none;
     color: var(--cor-de-link);
-    margin-left: -35px;
+    /* margin-left: -35px; */
 }
 
 .jaimeFoto{
@@ -253,4 +255,40 @@ section.title{
     .title__network__item a{
         font-size: 10px;
     }
+}
+
+
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:315px){
+
+    .title__network{
+        /* border: solid rgb(81, 255, 0) 1px; */
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .title__network__item{
+        width: 50%;
+       
+        /* border: solid red 1px; */
+        
+    }
+
+}
+
+@media only screen and (max-width:218px){
+
+    .title__network{
+        /* border: solid rgb(81, 255, 0) 1px; */
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .title__network__item{
+        width: 55%;
+       
+        /* border: solid red 1px; */
+        
+    }
+
 }
