--- a/style.css
+++ b/style.css
@@ -10,14 +10,25 @@ coloque nas sessões indicadas*/
    --cor-de-fundo: #F5F5F5;
    --cor-de-link: #000;
 }
-
-body {
+*{
     box-sizing: border-box;
-    background-color: var(--cor-de-fundo) ;
-    font-family: 'Raleway';
     margin: 0;
     padding: 0;
+}
+body {
+    /* border: solid red 3px; */
+    /* box-sizing: border-box; */
+    background-color: var(--cor-de-fundo) ;
+    font-family: 'Raleway';
+    /* margin: 0; */
+    /* padding: 0; */
     /* line-height: 1; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 70%!important;
+    margin: auto!important;
 }
 ol, ul,li {
     list-style: none;
@@ -74,9 +85,40 @@ https://en.bem.info/methodology/quick-start/*/
 /* Vamos a desafiarnos trabajando con responsividad?
 Utiliza las referencias de los breakpoints @media abajo */
 
+/* PARTE RESPONSIVE***************************************************************************** */
 
+@media only screen and (max-width:1750px) {
+    body {
+        width: 80%!important;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:1500px) {
+    body {
+        width: 90%!important;
+    }
+}
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:1200px) {
+    body {
+        width: 95%!important;
+    }
+}
+
+/* PARTE RESPONSIVE***************************************************************************** */
+
+@media only screen and (max-width:1000px) {
+    body {
+        width: 96%!important;
+    }
+}
 /*Tablet*/
 @media (min-width: 768px) {
+
+
 
 /* Menú */
 
