--- a/assets/css/formacion.css
+++ b/assets/css/formacion.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,900&display=swap');
 
 section.academic{
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +30,7 @@ section.academic{
     
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 .academic__courses__box{
